tests/compile_fail/invalid_complex_selector_part_struct_literal.rs
use surgeist_style::{ComplexSelectorPart, Selector};

fn main() {
    let _part = ComplexSelectorPart {
        combinator: None,
        selector: Selector::compound(),
    };
}
